src/style/App.scss
@import url('https://fonts.googleapis.com/css?family=Orbitron');


$dark_blue : #0b132b;
$blue : #1c2541;
$light_blue : #3a506b;
$cyan : #5bc0be;
$white: #ffffff;
$grey: #D3D3D3;

.App {
  text-align: center;
  background: whitesmoke;
  min-height: 100vh;
  height: auto;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: $cyan;
  height: 200px;
  padding: 20px;
  color: white;
  margin-bottom: 10px;
  img {
    z-index: 0;
    position: relative;
    max-width: 400px;
  }
  div.links {
    position: absolute;
    z-index: 2;
    span {
      font-family: 'Orbitron', sans-serif;
      font-size: 18px;
      font-weight: 700;
      padding: 5px;
      color: $dark_blue;
      cursor: pointer;
    }
    span.active {
      border-bottom: solid 2px $white;
    }
  }
}

div.standings {
  display: none;
  font-family: 'Orbitron', sans-serif;
  padding-bottom: 15px;
  div.tableSelector.container {
    div.row {
      margin-left: auto;
      margin-right: auto;
      max-width: 600px;
      div {
        cursor: pointer;
        span {
          font-size: 24px;
        }
      }
      div.activeLabel {
        span {
          border-bottom: solid $cyan 2px;
        }
      }
    }
  }
  table {
    margin-left: auto;
    margin-right: auto;
    width: 700px;
    tbody {
      text-align: left;
      tr {
        td {
          font-size: 18px;
          padding: 5px;
        }
      }
    }
    thead {
      tr {
        th {
          cursor: pointer;
          padding: 5px;
        }
        th.spacer {
          width: 45px;
        }
        th.title {
          cursor: auto;
          text-transform: capitalize;
          font-size: 30px;
          color: $cyan;
        }
      }
    }
  }
}
.App-intro {
  font-size: large;
}

@keyframes Loading-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}
div.daySelector {
  font-family: 'Orbitron', sans-serif;
  margin-top: 10px;
  color: $blue;
  font-size: 26px;
  padding: 10px;
  div.row {
    text-align: center;
    i {
      cursor: pointer;
    }
  }
}
div.selectedGame {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  div.gameContent {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    max-width: 800px;
    font-family: 'Orbitron', sans-serif;
    color: $dark_blue;
    span {
      float: right;
      font-size: 35px;
      cursor: pointer;
      margin-top: -25px;
    }
    h1 {
      margin-top: 25px;
    }
    p {
      color: $light_blue;
      font-weight: 700;
    }
    div.scoreBoard {
      font-size: 75px;
      div {
        display: inline-block;
        width: 165px;
        img {
          height: 85px;
          margin: 10px 10px 50px 10px;
        }
      }
      div.score {
        display: inline-block;
        width: auto;
        margin: 5px;
        height: auto;
        span {
          font-size: 60px;
          width: 60px;
        }
      }
    }
    div.gameInfo {
      width: 750px;
      div.row {
        div {
          h2 {
            font-size: 24px;
          }
        }
      }
    }
    div.scoringPlays {
      width: 75%;
      margin-left: auto;
      margin-right: auto;
      h3 {
        margin-bottom: 25px;
      }
      div.goal {
        text-align: left;
        strong {
          color: $cyan;
        }
      }
    }
    div.threeStars {
      margin-top: 15px;
      div.star {
        display: inline-block;
        i {
          font-size: 25px;
        }
        h3 {
          font-size: 20px;
          margin: 2px 10px;
        }
      }
    }
  }
}
div.game {
  cursor: pointer;
  position: relative;
  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
  text-align: center;
  margin-top: 5px;
  margin-bottom: 5px;
  div.final {
    max-width: 170px!important;
  }
  div.inProgress {
    max-width: 160px!important;
  }
  div.board {
    background-color: $white;
    padding: 10px;
    height: 145px;
    p {
      color: $blue;
      font-family: 'Orbitron', sans-serif;
      font-size: 22px;
      font-weight: normal;
      text-align: center;
      margin-top: 5px;
      margin-bottom: 5px;
    }
    h2 {
      color: $blue;
      font-family: 'Orbitron', sans-serif;
      img {
        margin-left: 10px;
        margin-right: 10px;
        width: 50px;
      }
    }
  }
  div.matchup {
    text-align: center;
    background-color: $dark_blue;
    padding: 5px;
    h3 {
      margin-top: 10px;
      color: $white;
      font-family: 'Orbitron', sans-serif;
    }
  }
  div.row {
    div {
      height: 50px;
    }
    div.teams {
      font-family: 'Orbitron', sans-serif;
      background: $white;
      div {
        display: inline-block;
        padding: 10px;
        text-align: left;
        img {
          width: 30px
        }
      }
    }
    div.status {
      background: $blue;
      color: $cyan;
      font-family: 'Orbitron', sans-serif;
      padding: 15px 5px;
    }
  }
}
.game::after {
  content: '';
  position: absolute;
  z-index: -1; /* hide shadow behind image */
  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
  width: 70%;
  left: 15%; /* one half of the remaining 30% */
  height: 100px;
  bottom: 0;
}
div.loading {
  img {
    animation: Loading-spin infinite 2s linear;
    margin-top: 125px;
    width: 200px;
    color: $blue;
  }
}
@media only screen and (max-width: 1200px) {
    .game {
      div.board {
        h2 {
          font-size: 18px;
          img {
            width: 50px;
            margin-left: 5px;
            margin-right: 5px;
          }
        }
      }
    }
}
@media only screen and (max-width: 992px) {
  div.standings {
    table {
      width: 600px;
    }
  }
  div.selectedGame {
    div.gameContent {
      width: 600px;
      div.gameInfo {
        width: 500px;
        div.row {
          div {
            h2 {
              font-size: 16px;
              font-weight: 700;
            }
          }
        }
      }
      div.threeStars {
        div.star {
          h3 {
            font-size: 18px;
          }
        }
      }
      div.scoringPlays {
        width: 85%;
      }
    }
  }
}
@media only screen and (max-width: 768px) {
  div.selectedGame {
    div.gameContent {
      width: 100%;
      div.scoreBoard {
        div {
          width: 130px;
          img {
            height: 65px;
            margin-bottom: 5px;
          }
        }
        div.score {
          font-size: 50px;
          margin-bottom: -15px;
          span {
            width: 50px;
          }
        }
      }
      div.gameInfo {
        padding: 0;
        width: 450px;
      }
    }
  }
}
@media only screen and (max-width: 500px) {
  div.standings {
    h1 {
      font-size: 26px;
    }
    div.tableSelector.container {
      div.row {
        div {
          span {
            font-size: 16px;
          }
        }
      }
    }
  }
  div.loading {
    img {
      width: 100px;
    }
  }
  .App-header {
    background-color: $cyan;
    height: 120px;
    padding: 20px;
    color: white;
    margin-bottom: 10px;
    img {
      max-width: 200px;
    }
  }
  div.daySelector {
    div.row {
      div {
        font-size: 20px;
      }
    }
  }
  .game {
    div.board {
      height: 100px;
      p {
        font-size: 16px;
      }
      h2 {
        img {
          margin-left: 2px;
          margin-right: 2px;
          width: 30px;
        }
      }
    }
    div.matchup {
      padding-top: 3px;
      padding-bottom: 3px;
      h3 {
        margin: 0;
        font-size: 15px;
      }
    }
    div.row {
      div.teams {

      }
    }
  }
  div.selectedGame {
    div.gameContent {
      div.scoreBoard {
        div.score {
          font-size: 25px;
          margin-bottom: 0px;
        }
        div {
          width: 85px;
          img  {
            height: 50px;
            margin: 5px;
          }
        }
      }
      div.gameInfo {
        width: 280px;
        div.row {
          div {
            h2 {
              font-size: 14px;
              height: 2em;
            }
            p {
              font-size: 10px;
            }
          }
        }
      }
      div.scoringPlays {

      }
    }
  }
}

@media only screen and (max-width: 375px) {
  .hidden-mobile {
    display: none;
  }
  .game {
    div.board {
      height: 75px;
      p {
        font-size: 12px;
      }
      h2 {
        margin-top: 10px;
        font-size: 14px;
        img {
          width: 20px;
        }
      }
    }
  }
}

